--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ idna==3.10
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+python-decouple==3.8
 PyYAML==6.0.2
 referencing==0.35.1
 requests==2.32.3
